# fta_system

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt  test_e2e.py  test_knowledge_e2e.py
backend/src/: __init__.py  config.py  main.py
backend/src/api/v1/: __init__.py  auth.py  benchmark.py  collaboration.py  demo_seed.py  documents.py  expert.py  extraction.py  fta.py  knowledge.py  multidoc.py  projects.py  validation.py  ws.py
backend/src/core/: auth.py  llm.py
backend/src/models/: database.py  models.py
backend/src/schemas/: __init__.py  fta_schema.py
backend/src/services/evaluation/: __init__.py  engine.py
backend/src/services/extraction/: __init__.py  document_parser.py  entity_recognizer.py  knowledge_extractor.py  relation_extractor.py
backend/src/services/generation/: __init__.py  fta_generator.py
backend/src/services/rag/: rag_service.py
backend/src/services/validation/: __init__.py  validator.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  vite-env.d.ts
frontend/src/components/: NodePropertyPanel.tsx  ValidationPanel.tsx
frontend/src/components/common/: AppHeader.tsx  AppSidebar.tsx  NodeResizeWrapper.tsx
frontend/src/components/gates/: AndGateNode.tsx  InhibitGateNode.tsx  (+6 more)
frontend/src/hooks/: useCollabWs.ts
frontend/src/schemas/: ftaSchema.ts
frontend/src/services/: api.ts
frontend/src/store/: ftaStore.ts
frontend/src/stores/: authStore.ts
frontend/src/styles/: App.css  index.css
(+15 files in other folders)
