[tool.poetry]
name = "fta-backend"
version = "1.0.0"
description = "故障树智能生成系统后端"
authors = ["FTA Team <team@fta-system.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.0"
alembic = "^1.12.0"
pymysql = "^1.1.0"
cryptography = "^41.0.0"
redis = "^5.0.0"
neo4j = "^5.14.0"
pymilvus = "^2.3.0"
langchain = "^0.1.0"
langchain-openai = "^0.0.5"
openai = "^1.0.0"
sentence-transformers = "^2.2.0"
pypdf2 = "^3.0.0"
python-docx = "^1.1.0"
openpyxl = "^3.1.0"
pytesseract = "^0.3.10"
pillow = "^10.1.0"
pdf2image = "^1.16.0"
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.0"}
httpx = "^0.25.0"
aiofiles = "^23.2.0"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"

[tool.poetry.group.dev.dependencies]
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100
